fix elint error
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@289 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-04  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: emacs trunk elint error.
+
 2012-01-03  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Add: new customize variables (immitate magit)
